snapshot have description #100
